--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@capacitor/browser": "latest",
-    "@capacitor/core": "latest",
-    "@capacitor/splash-screen": "latest"
+    "@capacitor/browser": "6.0.5",
+    "@capacitor/core": "6.2.1",
+    "@capacitor/ios": "6.2.1",
+    "@capacitor/splash-screen": "6.0.3",
+    "@capacitor-firebase/crashlytics" : "^6.3.1",
+    "@capacitor-mlkit/barcode-scanning" : "^6.2.0"
   },
   "devDependencies": {
-    "@capacitor/cli": "latest",
+    "@capacitor/cli": "6.2.1",
     "vite": "^2.9.13"
   },
   "author": "",
